// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div>
  <div
    class="polygon-options"
  >
    <div
      class="option-block"
    >
      <div
        class="label"
      >
        Sides
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="3"
        />
        
      </div>
    </div>
    <div>
      DummyInFillBlock
    </div>
  </div>
</div>
`;

exports[`should render correctly 2`] = `
<div>
  <div
    class="polygon-options"
  >
    <div
      class="option-block"
    >
      <div
        class="label"
      >
        Sides
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="5"
        />
        
      </div>
    </div>
    <div>
      DummyInFillBlock
    </div>
  </div>
</div>
`;

exports[`should render correctly 3`] = `
<div>
  <div
    class="polygon-options"
  >
    <div
      class="option-block"
    >
      <div
        class="label"
      >
        Sides
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="8"
        />
        
      </div>
    </div>
    <div>
      DummyInFillBlock
    </div>
  </div>
</div>
`;

exports[`should render correctly 4`] = `
<div>
  <div
    class="polygon-options"
  >
    <div
      class="option-block"
    >
      <div
        class="label"
      >
        Sides
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="5"
        />
        
      </div>
    </div>
    <div>
      DummyInFillBlock
    </div>
  </div>
</div>
`;
